# ai-costguard

./: .env.example  .gitignore  README.md  pyproject.toml
config/: pricing.example.yaml
costguard/: __init__.py  budget.py  cache.py  claude_code.py  cli.py  cline.py  config.py  doctor.py  headroom.py  install.py  paths.py  pricing.py  proxy.py  uninstall.py  usage.py  utils.py
docs/: ARCHITECTURE.md  RUNBOOK.md  SECURITY.md  START_HERE.md  TROUBLESHOOTING.md  WORK_PC_UPDATE.md
docs/prompts/: work-pc-validation-prompt.es.md  work-pc-validation-prompt.md
templates/: claude_settings_fragment.json  cline_instructions.md  costguard.env.example  costguard.settings.yaml
tests/: test_active_model_routing.py  test_anthropic_proxy.py  test_cache.py  test_claude_settings_merge.py  test_headroom.py  test_install.py  test_pricing.py  test_uninstall.py
