[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-costguard"
version = "0.1.0"
description = "Local-first cost and safety guard for coding agents."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "AI Cost Guard Contributors" }]
dependencies = [
  "typer>=0.12",
  "rich>=13",
  "PyYAML>=6",
  "python-dotenv>=1",
  "httpx>=0.27",
]

[project.optional-dependencies]
gateway = ["httpx>=0.27"]
cache = []
headroom = []
dev = [
  "pytest>=8",
  "pytest-cov>=5",
]

[project.scripts]
costguard = "costguard.cli:app"

[tool.setuptools.packages.find]
include = ["costguard*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
